--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,34 @@ ext {
     ]
 
     dependencies = [
+            //基本库
+            kotlin: "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+            core_ktx: 'androidx.core:core-ktx:1.3.2',
+            appcompat: 'androidx.appcompat:appcompat:1.2.0',
+            material: 'com.google.android.material:material:1.2.1',
+            constraintlayout: 'androidx.constraintlayout:constraintlayout:2.0.1',
 
+            //测试
+            junit: 'junit:junit:4.13.2',
+            ext_junit: 'androidx.test.ext:junit:1.1.2',
+            espresso_core: 'androidx.test.espresso:espresso-core:3.3.0',
+
+            //Jetpack lifecycle
+            lifecycle_extensions: "androidx.lifecycle:lifecycle-extensions:2.2.0",
+            lifecycle_viewmodel_ktx: "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0",
+            lifecycle_livedata_ktx: "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01",
+
+            //Jetpack Room 数据库框架
+            room_runtime: "androidx.room:room-runtime:2.2.5",
+            room_compiler: "androidx.room:room-compiler:2.2.5",
+
+            //Retrofit 网络通信框架
+            retrofit: 'com.squareup.retrofit2:retrofit:2.6.1',
+            converter_gson: 'com.squareup.retrofit2:converter-gson:2.6.1',
+
+            //协程
+            kotlinx_coroutines_core: "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9",
+            kotlinx_coroutines_android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7",
     ]
 }
 
