重新调整架构，base模块为业务无关库，common模块为业务相关但通用的功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies.espresso_core
 
     //从基础库继承各个依赖
-    implementation project(':module_base')
+    implementation project(':module_common')
 
 }
