--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -35,27 +35,12 @@ android {
 
 dependencies {
 
-    //基础库,向其他模块暴露
-    api rootProject.ext.dependencies.kotlin
-    api rootProject.ext.dependencies.core_ktx
-    api rootProject.ext.dependencies.appcompat
-    api rootProject.ext.dependencies.material
-    api rootProject.ext.dependencies.constraintlayout
+    //kotlin
+    implementation rootProject.ext.dependencies.kotlin
+    implementation rootProject.ext.dependencies.core_ktx
+    //base相关基类需要使用
+    implementation rootProject.ext.dependencies.appcompat
+    //RecyclerView适配器相关
+    implementation rootProject.ext.dependencies.material
 
-    //Jetpack lifecycle
-    implementation rootProject.ext.dependencies.lifecycle_extensions
-    implementation rootProject.ext.dependencies.lifecycle_viewmodel_ktx
-    implementation rootProject.ext.dependencies.lifecycle_livedata_ktx
-
-    //Jetpack Room 数据库框架
-    implementation rootProject.ext.dependencies.room_runtime
-    kapt rootProject.ext.dependencies.room_compiler
-
-    //Retrofit 网络通信框架
-    implementation rootProject.ext.dependencies.retrofit
-    implementation rootProject.ext.dependencies.converter_gson
-
-    //协程
-    implementation rootProject.ext.dependencies.kotlinx_coroutines_core
-    implementation rootProject.ext.dependencies.kotlinx_coroutines_android
 }
