--- a/module_demo/build.gradle
+++ b/module_demo/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies.espresso_core
 
     //从基础库继承各个依赖
-    implementation project(':module_base')
+    implementation project(':module_common')
+
+    //Room
+    implementation rootProject.ext.dependencies.room_runtime
+    kapt rootProject.ext.dependencies.room_compiler
 }
