改进DesktopLayerLayout，自适应、屏幕方向变化、动画中止问题

--- a/module_demo/src/main/AndroidManifest.xml
+++ b/module_demo/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:theme="@style/Theme.Fundark"
         tools:targetApi="m">
         <activity android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="sensor"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
