--- a/module_views/src/main/AndroidManifest.xml
+++ b/module_views/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Fundark"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="sensor"
+        <activity
+            android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            >
+            android:exported="true"
+            android:screenOrientation="sensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
