--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // 用于navigation间传递数据
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
     }
 }
 
@@ -29,7 +29,7 @@ allprojects {
 ext {
 
     android = [
-            compileSdkVersion : 30,
+            compileSdkVersion : 31,
             minSdkVersion : 19,
             targetSdkVersion : 30,
             versionCode : 1,
