--- a/module_views/build.gradle
+++ b/module_views/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies.espresso_core
 
     // 从基础库继承各个依赖
-    implementation project(':module_common')
+    implementation project(':module_base')
 
     // navigation
     def nav_version = "2.5.3"
