--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,5 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies.espresso_core
 
     //从基础库继承各个依赖
-    implementation project(':module_common')
-    //implementation project(':module_demo')
+    implementation project(':module_base')
 }
