--- a/module_hardware/build.gradle
+++ b/module_hardware/build.gradle
@@ -34,14 +34,17 @@ android {
 }
 
 dependencies {
-    // 共享BASE库相关功能
-    api project(':module_base')
+    // 测试相关
+    testImplementation rootProject.ext.dependencies.junit
+    androidTestImplementation rootProject.ext.dependencies.ext_junit
+    androidTestImplementation rootProject.ext.dependencies.espresso_core
 
-    // Jetpack Room数据库框架, kapt不能传递，需要在使用的地方引入
-//    api rootProject.ext.dependencies.room_runtime
-//    kapt rootProject.ext.dependencies.room_compiler
+    // 从基础库继承各个依赖
+    implementation project(':module_base')
 
-    // Retrofit网络通信框架
-    api rootProject.ext.dependencies.retrofit
-    api rootProject.ext.dependencies.converter_gson
+    // navigation
+    def nav_version = "2.5.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 }
