--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ':app'
 include ':module_base'
 include ':module_mvvm'
-include ':module_common'
+include ':module_hardware'
 include ':module_views'
 include ':module_media'
