--- a/module_views/src/main/AndroidManifest.xml
+++ b/module_views/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.silencefly96.module_views">
 
+    <!--  储存权限  -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:name=".ViewApplication"
         android:allowBackup="true"
