更新部分内容

--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     // Retrofit网络通信框架
     api rootProject.ext.dependencies.retrofit
     api rootProject.ext.dependencies.converter_gson
+
+    // Glide
+    api rootProject.ext.dependencies.glide
 }
