--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ ext {
             //协程
             kotlinx_coroutines_core: "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9",
             kotlinx_coroutines_android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7",
+
+            // Glide
+            glide: 'com.github.bumptech.glide:glide:4.15.1',
     ]
 }
 
