--- a/module_views/build.gradle
+++ b/module_views/build.gradle
@@ -52,5 +52,5 @@ dependencies {
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 }
