--- a/module_mvvm/build.gradle
+++ b/module_mvvm/build.gradle
@@ -10,14 +10,14 @@ plugins {
 //}
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    compileSdkVersion BuildVersion.compileSdkVersion
 
     defaultConfig {
         applicationId "com.silencefly96.module_demo"
-        minSdkVersion rootProject.ext.android.minSdkVersion
-        targetSdkVersion rootProject.ext.android.targetSdkVersion
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
+        minSdkVersion BuildVersion.minSdkVersion
+        targetSdkVersion BuildVersion.targetSdkVersion
+        versionCode BuildVersion.versionCode
+        versionName BuildVersion.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,14 +43,14 @@ android {
 
 dependencies {
     // 测试相关
-    testImplementation rootProject.ext.dependencies.junit
-    androidTestImplementation rootProject.ext.dependencies.ext_junit
-    androidTestImplementation rootProject.ext.dependencies.espresso_core
+    testImplementation Libs.junit
+    androidTestImplementation Libs.ext_junit
+    androidTestImplementation Libs.espresso_core
 
     // 从基础库继承各个依赖
     implementation project(':module_base')
 
     // Room, kapt不能使用api传递
-    implementation rootProject.ext.dependencies.room_runtime
-    kapt rootProject.ext.dependencies.room_compiler
+    implementation Libs.room_runtime
+    kapt Libs.room_compiler
 }
