--- a/module_hardware/build.gradle
+++ b/module_hardware/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'version-plugin'
+    id 'version-test-plugin'
+    id 'version-third-plugin'
 }
 
 android {
@@ -40,15 +41,6 @@ android {
 }
 
 dependencies {
-    // 测试相关
-    testImplementation Libs.junit
-    androidTestImplementation Libs.ext_junit
-    androidTestImplementation Libs.espresso_core
-
     // 从基础库继承各个依赖
     implementation project(':module_base')
-
-    // navigation
-    implementation Libs.navigation_fragment
-    implementation Libs.navigation_ui
 }
