--- a/module_mvvm/build.gradle
+++ b/module_mvvm/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'version-plugin'
+    id 'version-test-plugin'
+    id 'version-third-plugin'
 }
 
 //kapt {
@@ -43,15 +44,6 @@ android {
 }
 
 dependencies {
-    // 测试相关
-    testImplementation Libs.junit
-    androidTestImplementation Libs.ext_junit
-    androidTestImplementation Libs.espresso_core
-
     // 从基础库继承各个依赖
     implementation project(':module_base')
-
-    // Room, kapt不能使用api传递
-    implementation Libs.room_runtime
-    kapt Libs.room_compiler
 }
