增加隐私整改插件privacy-plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'version-test-plugin'
     // id 'version-third-plugin'
+     id 'silencefly96.privacy'
 }
 
 android {
