--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include ':module_views'
 include ':module_media'
 include ':module_third'
 include ':module_tech'
+include ':privacy-plugin'
 includeBuild 'version-plugin'
