--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     repositories {
+        maven{url './privacy_repo'}
         maven{ url'https://maven.aliyun.com/repository/google/' }
-        maven{ url'https://maven.aliyun.com/repository/public/' }//central仓和jcenter仓的聚合仓
+        maven{ url'https://maven.aliyun.com/repository/public/' }
         google()
         mavenCentral()
     }
     dependencies {
+        // 加载自定义插件 group + module + version，不要多手打空格！
+        classpath 'silencefly96.privacy:privacy-plugin:1.0.0'
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
