--- a/privacy-plugin/build.gradle
+++ b/privacy-plugin/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
-apply plugin: 'groovy-gradle-plugin'
 
 dependencies {
+    // 需要用的的API，少了编译报错
     implementation gradleApi()
     implementation localGroovy()
 
+    // Transform用到的依赖
     implementation 'com.android.tools.build:gradle:4.0.0'
 
     // ASM依赖
