升级gradle到7.5.1，插件版本7.4.2

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         // 从本地仓库中加载自定义插件 group + artifactId + version，不要多手打空格！
         classpath 'silencefly96.privacy:privacy-plugin:1.0.0'
 
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
         // 用于navigation间传递数据
