--- a/privacy-plugin/build.gradle
+++ b/privacy-plugin/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'groovy'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 dependencies {
     // 需要用的的API，少了编译报错
@@ -20,18 +20,22 @@ dependencies {
 
 // 上传到本地/远程仓库
 // 需要创建(文件名为插件id): resources\META-INF\gradle-plugins\silencefly96.privacy.properties
-uploadArchives{
-    repositories.mavenDeployer {
-        //提交到远程服务器：
-        // repository(url: "http://www.xxx.com/repos") {
-        //    authentication(userName: "admin", password: "admin")
-        // }
-        // 本地的 Maven 地址设置，部署到本地，也就是项目的根目录下
-        repository(url: uri('../privacy_repo'))
-
+publishing{
+    publications {
         // 配置信息，使用: classpath 'groupId:artifactId:version'(不能有空格)
-        pom.groupId = 'silencefly96.privacy'
-        pom.artifactId = 'privacy-plugin'
-        pom.version = '1.0.0'
+        release(MavenPublication) {
+            groupId = 'silencefly96.privacy'
+            artifactId = 'privacy-plugin'
+            version = '1.0.0'
+        }
+        snapshot(MavenPublication) {
+            groupId = 'silencefly96.privacy'
+            artifactId = 'privacy-plugin'
+            version = '1.0.0'
+        }
+    }
+    repositories {
+        // 本地的 Maven 地址设置，部署到本地，也就是项目的根目录下
+        maven { url = uri('../privacy_repo') }
     }
 }
