--- a/module_tech/src/main/AndroidManifest.xml
+++ b/module_tech/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".tech.activity_flag.TestActivityA" android:taskAffinity="com.test.TestA"/>
+        <activity android:name=".tech.activity_flag.TestActivityB" android:launchMode="singleTop" android:taskAffinity="com.test.TestA"/>
+        <activity android:name=".tech.activity_flag.TestActivityC" android:taskAffinity="com.test.TestA"/>
+        <activity android:name=".tech.activity_flag.TestActivityD" android:taskAffinity="com.test.TestB"/>
+        <activity android:name=".tech.activity_flag.TestActivityE" android:taskAffinity="com.test.TestB"/>
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
