--- a/module_tech/src/main/AndroidManifest.xml
+++ b/module_tech/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".tech.activity_flag.TestActivityD" android:taskAffinity="com.test.TestB"/>
         <activity android:name=".tech.activity_flag.TestActivityE" android:taskAffinity="com.test.TestB"/>
         <activity android:name=".tech.animation.AnimationActivity" />
+        <activity android:name=".tech.animator.AnimatorActivity" />
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
