--- a/module_tech/src/main/AndroidManifest.xml
+++ b/module_tech/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".tech.activity_flag.TestActivityE" android:taskAffinity="com.test.TestB"/>
         <activity android:name=".tech.animation.AnimationActivity" />
         <activity android:name=".tech.animator.AnimatorActivity" />
+        <activity android:name=".tech.scene.SceneTransitionActivity" android:theme="@style/CustomActivityTheme"/>
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
