更新kts文章中ext变量使用说明

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,8 +4,8 @@ name: Release
 on:
   push:
     # 根据branch或者tags来触发
-    # branches:
-    #  - main
+    branches:
+      - main
 
     tags:
       - "v*"
